force-app/main/default/objects/PIRL_Element__c/PIRL_Element__c.object-meta.xml
<CustomObject>
    <description>The PIRL data type</description>
    <label>PIRL Element</label>
    <nameField>
        <label>PIRL Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIRL Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>