force-app/main/default/objects/PIRL_Element__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>