force-app/main/default/objects/PIRL_Element__c/fields/Definition_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Definition_Instructions__c</fullName>
    <label>Definition/Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>