force-app/main/default/objects/PIRL_Element__c/fields/Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Field_Length__c</fullName>
    <label>Field Length</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>